# Bachelor-AI-Preperation

./: .gitignore  README.md  config.py
af-detect/: __init__.py  main.py  pyproject.toml  requirements.txt
af-detect/configs/: base.yaml
af-detect/data/: metadata.csv  records_af.csv  records_index.csv  records_normal.csv
af-detect/src/: data_preparation.py
af-detect/src/data_prep/: 00_extract.py  01_resample_filter.py  02_window.py  03_make_metadata.py
af-detect/src/utils/: find_root.py
