[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "af-detect"
version = "0.1.0"
description = "Atrial Fibrillation detection using deep learning"
authors = [{ name = "Arjan" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
